Add competencies
