# config/routes.rb
@@ -6,6 +6,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       resources :authors
       resources :courses
+      resources :competencies
     end
   end
 
