# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2024_10_14_085938) do
+ActiveRecord::Schema[7.0].define(version: 2024_10_14_185831) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -21,6 +21,14 @@ ActiveRecord::Schema[7.0].define(version: 2024_10_14_085938) do
     t.datetime "updated_at", null: false
   end
 
+  create_table "competencies", force: :cascade do |t|
+    t.string "name", null: false
+    t.bigint "course_id"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["course_id"], name: "index_competencies_on_course_id"
+  end
+
   create_table "courses", force: :cascade do |t|
     t.string "name", null: false
     t.bigint "author_id"
@@ -29,5 +37,6 @@ ActiveRecord::Schema[7.0].define(version: 2024_10_14_085938) do
     t.index ["author_id"], name: "index_courses_on_author_id"
   end
 
+  add_foreign_key "competencies", "courses"
   add_foreign_key "courses", "authors"
 end
