# openapi/v1.yaml
@@ -134,6 +134,142 @@ paths:
           description: Автор удален
         '404':
           description: Автор не найден
+        '422':
+          description: Не получилось удалить автора
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unprocessable_entity_error"
+  "/api/v1/competencies":
+    get:
+      summary: Список компетенций
+      tags:
+      - Компетенции
+      responses:
+        '200':
+          description: Список компетенций получен
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  competencies:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/competency"
+    post:
+      summary: Создать компетенцию
+      tags:
+      - Компетенции
+      parameters: []
+      responses:
+        '201':
+          description: Компетенция создана
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/competency"
+        '400':
+          description: Cервер не может обработать запрос
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/bad_request_error"
+        '422':
+          description: При обработке данных произошла ошибка
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unprocessable_entity_error"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - name
+              - course_id
+              properties:
+                name:
+                  type: string
+                course_id:
+                  type: integer
+  "/api/v1/competencies/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: Получить компетенцию
+      tags:
+      - Компетенции
+      responses:
+        '200':
+          description: Компетенция получена
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/competency"
+        '404':
+          description: Компетенция не найдена
+    put:
+      summary: Обновить компетенцию
+      tags:
+      - Компетенции
+      parameters: []
+      responses:
+        '200':
+          description: Компетенция обновлена
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/competency"
+        '400':
+          description: Cервер не может обработать запрос
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/bad_request_error"
+        '404':
+          description: Компетенция не найдена
+        '422':
+          description: При обработке данных произошла ошибка
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/unprocessable_entity_error"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - name
+              - course_id
+              properties:
+                name:
+                  type: string
+                course_id:
+                  type: integer
+    delete:
+      summary: Удалить компетенцию
+      tags:
+      - Компетенции
+      parameters:
+      - name: id
+        in: path
+        description: id
+        required: true
+        schema:
+          type: string
+      responses:
+        '204':
+          description: Компетенция удалена
+        '404':
+          description: Компетенция не найдена
   "/api/v1/courses":
     get:
       summary: Список курсов
@@ -294,6 +430,19 @@ components:
           type: string
         author:
           "$ref": "#/components/schemas/author"
+    competency:
+      type: object
+      required:
+      - id
+      - name
+      - course
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        course:
+          "$ref": "#/components/schemas/course"
     bad_request_error:
       type: object
       required:
